typescript/checker/tests/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            83,
        ),
        hi: BytePos(
            96,
        ),
        ctxt: #0,
    },
    callee: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    84,
                ),
                hi: BytePos(
                    95,
                ),
                ctxt: #0,
            },
            kind: TsNumberKeyword,
        },
    ),
}
 --> $DIR/tests/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts:6:5
  |
6 | new (a ** b ** c);
  |     ^^^^^^^^^^^^^

